<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_artist"
        android:icon="@drawable/artista"
        android:title="@string/title_artist"
        android:textColor="@color/white"
        />


...
        android:id="@+id/navigation_prize"
        android:icon="@drawable/prizes_icon_29"
        android:title="@string/title_prize"
        android:textColor="@color/white"/>

    <item
        android:id="@+id/navigation_albums"
        android:icon="@drawable/album_de_musica"
        android:title="@string/title_albums"
        android:textColor="@color/white"/>

</menu>
