<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AlbumsFragment"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/albumsRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/album_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveAlbumFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:src="@android:drawable/ic_input_add"
        android:contentDescription="@string/album_description"
        app:backgroundTint="#5553EA"/>

</FrameLayout>
