...
    <string name="coverAlbum">Cover</string>
    <string name="genero1">Salsa</string>
    <string name="genero2">Rock</string>
    <string name="genero3">Folk</string>
    <string name="genero4">Classical</string>
    <string name="etiqueta1">Sony Music</string>
    <string name="etiqueta2">EMI</string>
    <string name="etiqueta3">Discos Fuentes</string>
    <string name="etiqueta4">Elektra</string>
    <string name="etiqueta5">Fania Records</string>
    <string name="seleccionGenero">Genero</string>
    <string name="seleccionEtiqueta">Etiqueta de grabacion</string>
    <string name="descripcionAlbum">Descripcion</string>
...
