<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SaveArtistFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/artistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombreAlbum"
            android:inputType="text"
            android:textSize="24sp"
            android:autofillHints="text"/>

        <EditText
            android:id="@+id/artistDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/descripcion"
            android:inputType="text"
            android:textSize="24sp"
            android:autofillHints="text"/>

        <EditText
            android:id="@+id/artistImage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Url Imagen"
            android:inputType="text"
            android:textSize="24sp"
            android:autofillHints="text"/>

        <Button
            android:id="@+id/artistBirthday"
            style="?android:spinnerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Fecha de Cumpleaños"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelarCrearArtista"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:text="@string/cancelar"
                app:backgroundTint="@color/cancelar"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/guardarCrearArtista"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:text="@string/guardar"
                app:backgroundTint="@color/guardar"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>