<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/albumsRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/musician_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveArtistFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/crearArtista"
        android:src="@android:drawable/ic_input_add" />

</FrameLayout>